# qq-bot-openclaw

./: .env.example  .gitignore  CHANGELOG.md  CONCISE_MODE_IMPLEMENTATION.md  CONVERSATION_MEMORY_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  VISION_CONFIG_IMPLEMENTATION.md  bot.py  config.py  group_configs.example.json  pyproject.toml  requirements.txt  start.bat  start.sh  test_api.py  test_config.py  test_conversation_memory_encoding.py  test_intelligent_trigger_at_check.py  test_kb_group_set_complete.py  test_kb_group_set_fix.py  test_kb_info_access.py  test_kb_manager_standalone.py  test_knowledge_base_manager.py  test_retriever_standalone.py  test_vector_db_import.py  test_vector_db_manager_standalone.py  test_wiki_parser_standalone.py
docs/: CONCISE_MODE.md  CONVERSATION_MEMORY_ENCODING_FIX.md  CONVERSATION_MEMORY_PLAN.md  DEPLOYMENT.md  FAQ.md  GROUP_REPLY_MODE.md  IMAGE_RECOGNITION_DEV.md  INTELLIGENT_TRIGGER.md  INTELLIGENT_TRIGGER_AT_CHECK_FIX.md  INTELLIGENT_TRIGGER_TEST.md  KB_ADMIN_COMMANDS_FIX.md  KB_GROUP_SET_FIX.md  MULTI_MODEL.md  NAPCAT.md  REMOVE_REDUNDANT_IMPORTS.md  STEP1_KNOWLEDGE_BASE_MANAGER.md  STEP2_VECTOR_DATABASE_MANAGER.md  STEP3_WIKI_PARSER.md  STEP4_RETRIEVER.md  STEP5_AI_INTEGRATION.md  STEP7_ADMIN_COMMANDS.md  VECTOR_DB_IMPORT_FIX.md  VISION_CHINESE_FIX.md  VISION_CONFIG.md  VISION_PERSONA_FIX.md
plugins/: __init__.py
plugins/openclaw_chat/: __init__.py  ai_processor.py  chat.py  conversation_memory.py  image_processor.py  intelligent_trigger.py  kb_admin_commands.py  (+6 more)
tests/: test_image_recognition.py
